--- a/src/main/webapp/View/cssAdmin/style.css
+++ b/src/main/webapp/View/cssAdmin/style.css
@@ -13740,10 +13740,11 @@ input:focus {
       background: #ffffff; }
     .navbar .navbar-brand-wrapper .navbar-brand {
       color: #27367f;
-      font-size: 1.5rem;
+      font-size: 2rem;
+      font-weight: 900;
       line-height: 48px;
       margin-right: 0;
-      padding: .25rem 0;
+      padding: .25rem 70px;
       width: 100%;
       display: -webkit-inline-flex;
       display: inline-flex; }
